Fix : #img change width:100% into max-width:100% for width under 900px; Add #wrap-attractions > img width: 100% for 1 row 1 img,  in index.css.

--- a/static/index.css
+++ b/static/index.css
@@ -4,7 +4,7 @@ body, html{
 }
 
 img{
-    width: 100%;
+    max-width: 100%;
     /* Mozilla-based browsers will ignore this. */
     height: -webkit-fill-available;
     /*  WebKit-based browsers will ignore this. */
@@ -189,6 +189,7 @@ img{
 
 
 #wrap-attractions > img{
+    width: 100%;
     aspect-ratio: 270/197;
 }
 
